--- a/gofetch/src/App.css
+++ b/gofetch/src/App.css
@@ -1,38 +1,160 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  i-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   min-height: 100vh;
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-family: "Righteous", cursive;
+  font-synthesis: style;
+  background-color: black;
+  overflow: auto;
+}
+.app h1 {
+  text-align: center;
+  font-size: 50px;
+  box-shadow: rgb(73, 3, 46);
+  font-stretch: ultra-expanded;
+}
+.game {
+  z-index: 5;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  display: flex;
+  z-index: 10;
+  position: relative;
+  flex-direction: column;
+  height: 150px;
+  width: 100px;
+  min-width: 90px;
+  padding: 0.5em;
+  border-radius: 16px;
+  background: black;
+  box-shadow: -1rem 0 3rem rgb(73, 3, 46);
+  transition: 0.2s;
+}
+.card:hover {
+  transform: translateY(-1rem);
+}
+.card:hover ~ .card {
+  transform: translateX(130);
 }
 
-@keyframes App-logo-spin {
-  from {
+h3 {
+  display: none;
+}
+.hand {
+  display: flex;
+  padding: 3rem;
+  position: relative;
+  align-items: center;
+  flex-wrap: wrap;
+  z-index: 3;
+}
+
+.hand h1 {
+  font-size: 24px;
+  z-index: 3;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+
+/* .glowing {
+  z-index: 0;
+  position: relative;
+  min-width: 750px;
+  height: 750px;
+  margin: -150px;
+  transform-origin: right;
+  animation: colorChange 5s linear infinite;
+}
+.glowing:nth-child(even) {
+  transform-origin: left;
+}
+@keyframes colorChange {
+  0% {
+    filter: hue-rotate(0deg);
     transform: rotate(0deg);
   }
-  to {
+  100% {
+    filter: hue-rotate(360deg);
+    transform: rotate(350deg);
+  }
+}
+
+.glowing div {
+  position: relative;
+  z-index: 0;
+  top: calc(80px * var(--i));
+  left: calc(80px * var(--i));
+  bottom: calc(80px * var(--i));
+  right: calc(80px * var(--i));
+}
+.glowing div:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -8px;
+  width: 15px;
+  height: 15px;
+  background: #f00;
+  border-radius: 50%;
+  z-index: 0;
+}
+.glowing div:nth-child(3n + 1):before {
+  background: rgba(134, 255, 0, 1);
+  box-shadow: 0 0 20px rgba(134, 255, 0, 1), 0 0 40px rgba(134, 255, 0, 1),
+    0 0 60px rgba(134, 255, 0, 1), 0 0 00px rgba(134, 255, 0, 1),
+    0 0 0 8px rgba(134, 255, 0, 0.1);
+}
+
+.glowing div:nth-child(3n + 2):before {
+  background: rgba(255, 214, 0, 1);
+  box-shadow: 0 0 20px rgba(255, 255, 0, 1), 0 0 40px rgba(255, 255, 0, 1),
+    0 0 60px rgba(255, 255, 0, 1), 0 0 00px rgba(255, 255, 0, 1),
+    0 0 0 8px rgba(255, 255, 0, 0.1);
+}
+.glowing div:nth-child(3n + 3):before {
+  background: rgba(0, 226, 255, 1);
+  box-shadow: 0 0 20px rgba(0, 226, 225, 1), 0 0 40px rgba(0, 226, 255, 1),
+    0 0 60px rgba(0, 226, 255, 1), 0 0 00px rgba(0, 226, 255, 1),
+    0 0 0 8px rgba(0, 226, 255, 0.1);
+}
+.glowing div:nth-child(3n + 3) {
+  animation: animate 10s alternate infinite;
+}
+.glowing div:nth-child(3n + 2) {
+  animation: animate-reverse 3s alternate infinite;
+}
+.glowing div:nth-child(3n + 1) {
+  animation: animate-reverse 8s alternate infinite;
+}
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
     transform: rotate(360deg);
   }
 }
+@keyframes animate-reverse {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} */
