--- a/gofetch/src/App.css
+++ b/gofetch/src/App.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 body {
-  i-index: 2;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,6 @@ body {
   margin: 0;
   color: white;
   font-family: "Righteous", cursive;
-  font-synthesis: style;
   background-color: black;
   overflow: auto;
 }
@@ -30,7 +29,8 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
+.game :nth-child(2) {
+}
 .card {
   display: flex;
   z-index: 10;
@@ -57,7 +57,7 @@ h3 {
 }
 .hand {
   display: flex;
-  padding: 3rem;
+  padding: 0rem;
   position: relative;
   align-items: center;
   flex-wrap: wrap;
@@ -72,8 +72,8 @@ h3 {
   align-items: center;
 }
 
-/* .glowing {
-  z-index: 0;
+.glowing {
+  z-index: -10;
   position: relative;
   min-width: 750px;
   height: 750px;
@@ -97,7 +97,7 @@ h3 {
 
 .glowing div {
   position: relative;
-  z-index: 0;
+  z-index: -10;
   top: calc(80px * var(--i));
   left: calc(80px * var(--i));
   bottom: calc(80px * var(--i));
@@ -157,4 +157,4 @@ h3 {
   100% {
     transform: rotate(360deg);
   }
-} */
+}
