--- a/gofetch/src/App.css
+++ b/gofetch/src/App.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 100vh;
+  max-height: 100vh;
   padding: 0;
   margin: 0;
   color: white;
@@ -77,7 +77,7 @@ h3 {
   align-items: center;
 }
 
-.glowing {
+/* .glowing {
   z-index: -10;
   position: relative;
   min-width: 750px;
@@ -156,4 +156,4 @@ h3 {
   100% {
     transform: rotate(360deg);
   }
-} 
+}  */
